# OPT-LAB2

./: CMakeLists.txt  Code_Generation_Listing_test_false3.sig  Code_Generation_Listing_test_false4.sig  Code_Generation_Listing_test_true3.sig  Code_Generation_Listing_test_true4.sig  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Generating.cpp  Generator.cpp  Generator.h  Information_Table.cpp  Lexer.cpp  Lexer.h  Lexer_Listing_test_false1.sig  Lexer_Listing_test_false2.sig  Lexer_Listing_test_false3.sig  Lexer_Listing_test_false4.sig  Lexer_Listing_test_true1.sig  Lexer_Listing_test_true2.sig  Lexer_Listing_test_true3.sig  Lexer_Listing_test_true4.sig  Lexer_scan.cpp  OUTPUT.cpp  Parser.cpp  Parser.h  Parsing.cpp  README.md  Syntax_Listing_test_false1.sig  Syntax_Listing_test_false3.sig  Syntax_Listing_test_false4.sig  Syntax_Listing_test_true1.sig  Syntax_Listing_test_true2.sig  Syntax_Listing_test_true3.sig  Syntax_Listing_test_true4.sig  Token.cpp  Token.h  main.cpp  test_false1.sig  (+9 more)
ConsoleA.da50fbe5/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  parsing.obj.enc  vc143.idb
ConsoleA.da50fbe5/x64/Debug/ConsoleA.da50fbe5.tlog/: CL.read.1.tlog  (+8 more)
x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  parser.obj.enc  vc143.idb
x64/Debug/ConsoleA.da50fbe5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
